# pybind11_debug_eg

./: CMakeLists.txt  test.py
python_test/: test.py
src/: binder.cpp  mymath.cpp
